samples/ingress-internet.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: create-account
  name: create-account-ingress-internet
  labels:
    app: create-account-ingress-internet
  annotations:
   kubernetes.io/ingress.class: alb
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
   - http:
       paths:
         - path: /*
           backend:
             serviceName: create-account-np
             servicePort: 8080
